tests/NormalTests/paczka1/small_fuzzy/11792389.err
Error in line 1: C2ns6mFC S789 82,8
Error in line 8: A383 S67 365,0
